# icu4py

./: .pre-commit-config.yaml  .typos.toml  README.rst  download_icu.py  pyproject.toml  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: download_icu4c.py  main.yml
docs/: api.rst  changelog.rst  conf.py  index.rst  installation.rst  usage.rst
src/icu/: __init__.py  _ext.cpp
src/icu4py/: __init__.py  _ext.cpp  _ext.pyi  breakers.cpp  breakers.pyi  locale.cpp  locale_types.h  messageformat.cpp  messageformat.pyi
tests/: test_breakers.py  test_init.py  test_locale.py  test_messageformat.py
